--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "cross-env PORT=10888 react-scripts start",
-    "build": "react-scripts build"
+    "build": "react-scripts build",
+    "surge-deploy": "npm run build && surge ./build --domain vezdekod-image.surge.sh"
   },
   "keywords": [],
   "author": "",
@@ -13,7 +14,8 @@
   "devDependencies": {
     "cross-env": "^5.2.1",
     "react-hot-loader": "^4.12.21",
-    "react-scripts": "^3.4.1"
+    "react-scripts": "^3.4.1",
+    "surge": "^0.21.6"
   },
   "dependencies": {
     "@vkontakte/icons": "^1.27.0",
